--- a/src/components/song-list/songlist.css
+++ b/src/components/song-list/songlist.css
@@ -1,23 +1,4 @@
-.empty-state {
-    width: 100%;
-    margin-top: .5rem;
-    border-radius: 4px;
-    height: 20rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: 2px solid coral;
-    font-weight: bold;
-    font-size: .9rem;
+.list-container {
+    height: 10rem;
+    overflow: auto;
 }
-
-.empty-state img {
-    width: 8rem;
-}
-
-.empty-state .empty-state-text {
-
-}
-
-
